# bot_gago

./: Dockerfile  data.db  photo1  photo2  photo3  photo4  photo5  photo6  pyproject.toml  requirements.txt
telegram_bot_gago/: data.db  main.py
