[tool.poetry]
name = "telegram_bot_gago"
version = "0.1.0"
description = ""
authors = ["Dav1d-stern <mikaohanyan881@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.15.4"
aiogram = "^3.3.0"
Markups = "^4.0.0"
aiohttp = "^3.9.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
